...
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_field"
                android:hint="e.g., Fix leaking kitchen sink"
                android:paddingHorizontal="16dp"
                android:textSize="14sp"
...
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="4"
                android:layout_marginBottom="24dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCatPlumbing"
                    android:text="Plumbing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
...
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_category_btn"
                    android:textAllCaps="false"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnUrgHigh"
                    android:text="High"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
...
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_field"
                android:hint="e.g Kitchen \ Living Room \ Toilet ..."
                android:paddingHorizontal="16dp"
                android:textSize="15dp"
...
                        android:focusable="false"
                        android:drawableEnd="@android:drawable/ic_menu_recent_history"
                        android:paddingHorizontal="16dp"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Submit Request"
                android:backgroundTint="@color/orange"
                app:cornerRadius="8dp"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/btnSaveDraft"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Save as Draft"
                android:textColor="#000000"
                android:backgroundTint="#FFFFFF"
                style="?attr/materialButtonOutlinedStyle"
...
